--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,8 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap');
 body{
   background-color: #FCF9F2;
 }
-@import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap');
 * {
     margin: 0;
+    padding: 0;
+    box-sizing: border-box;
     font-family: "League Spartan", sans-serif;
   }
